--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,14 @@ spring.datasource.username=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.servlet.context-path=/users
-server.port=0
+server.port=8081
 spring.main.allow-circular-references=true
+
+#configuration du mail sender
+spring.mail.default-encoding=UTF-8
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=maissahrigua@gmail.com
+spring.mail.password=xgdv hsbg ssvr lnpg
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
